force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__ExperimentAnalysisStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExperimentAnalysisStatus__c</fullName>
    <label>Experiment Analysis Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExperimentAnalysisStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>