force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__MaxMetricValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaxMetricValueNumber__c</fullName>
    <label>Max Metric Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaxMetricValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>