force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__MinMetricValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MinMetricValueNumber__c</fullName>
    <label>Min Metric Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MinMetricValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>