force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__ProbabilityToBeatAllPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProbabilityToBeatAllPercent__c</fullName>
    <label>Probability To Beat All</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProbabilityToBeatAllPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>