force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__ProbabilityToBeatControlPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProbabilityToBeatControlPercent__c</fullName>
    <label>Probability To Beat Control</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProbabilityToBeatControlPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>