force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__rel_1726745177302_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726745177302_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AbnExperimentationSummary_AbnExperim_rel</label>
    <referenceTo>ssot__AbnExperiment__dlm</referenceTo>
    <relationshipLabel>AbnExperimentationSummary_AbnExperim_rel</relationshipLabel>
    <relationshipName>rel_1726745177302_end</relationshipName>
    <type>Lookup</type>
</CustomField>