force-app/main/default/objects/ssot__AbnExperimentationSummary__dlm/fields/ssot__VarianceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__VarianceNumber__c</fullName>
    <label>Variance</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VarianceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>